version/0.12/_sources/api/solver/_autosummary/settings/thermal_conductivity.rst.txt
:orphan:

.. _thermal_conductivity:

thermal_conductivity
====================

.. currentmodule:: ansys.fluent.core.solver.settings_231.thermal_conductivity

.. autoclass:: thermal_conductivity
    :show-inheritance:
    :undoc-members:
.. rubric:: Children

====================================================   ====================================================

Child                                                                                               Summary

====================================================   ====================================================
:ref:`option <option_9>`                                   Select method for calculating material property.

:ref:`value <value>`                                                                         'value' child.

:ref:`piecewise_linear <piecewise_linear>`                                        'piecewise_linear' child.

:ref:`piecewise_polynomial <piecewise_polynomial>`                            'piecewise_polynomial' child.

:ref:`polynomial <polynomial>`                                                          'polynomial' child.

:ref:`expression <expression>`                                                          'expression' child.

:ref:`user_defined_function <user_defined_function>`                         'user_defined_function' child.

:ref:`rgp_table <rgp_table>`                                                     Select RGP Table Data Set.

:ref:`real_gas_nist <real_gas_nist>`                                                 'real_gas_nist' child.

====================================================   ====================================================

.. rubric:: Included in:

================================   =================================

Parent                                                       Summary

================================   =================================
:ref:`fluid_child <fluid_child>`       'child_object_type' of fluid.

================================   =================================

